; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_gx.c_GX_InitTexObjMaxAniso.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_gx.c_GX_InitTexObjMaxAniso.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.__gx_texobj = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @GX_InitTexObjMaxAniso(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.__gx_texobj*, align 8
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32*, i32** %3, align 8
  %7 = bitcast i32* %6 to %struct.__gx_texobj*
  store %struct.__gx_texobj* %7, %struct.__gx_texobj** %5, align 8
  %8 = load %struct.__gx_texobj*, %struct.__gx_texobj** %5, align 8
  %9 = getelementptr inbounds %struct.__gx_texobj, %struct.__gx_texobj* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = and i32 %10, -1572865
  %12 = load i32, i32* %4, align 4
  %13 = call i32 @_SHIFTL(i32 %12, i32 19, i32 2)
  %14 = or i32 %11, %13
  %15 = load %struct.__gx_texobj*, %struct.__gx_texobj** %5, align 8
  %16 = getelementptr inbounds %struct.__gx_texobj, %struct.__gx_texobj* %15, i32 0, i32 0
  store i32 %14, i32* %16, align 4
  ret void
}

declare dso_local i32 @_SHIFTL(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
